syntax = "proto3";

package grpc.example.polling;

option java_multiple_files = true;
option java_package = "io.grpc.examples.polling";
option java_outer_classname = "PollingProto";


service Polling {
    rpc getPoll (PollRequest) returns (PollResponse) {}
}

message PollRequest {
    string name = 1;
    string question = 2;
}

message PollResponse {
    string name = 1;
    string question = 2;
}

